fix spacing menu

--- a/.hugo/themes/hello-4s3ti/assets/scss/_menu.scss
+++ b/.hugo/themes/hello-4s3ti/assets/scss/_menu.scss
@@ -198,5 +198,5 @@
 }
 
 .lang-name {
-	padding-left: 2rem;
+	margin-left: 1rem;
 }
